--- a/src/app/sass/abstracts/_mixins.scss
+++ b/src/app/sass/abstracts/_mixins.scss
@@ -23,3 +23,13 @@
     @content
   }
 }
+
+@mixin wrap{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1080px !important;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
